add all JS functionality. Change html and css to match some changes
Add all JS functionality. Change some tags attributes in the HTML and add a new style for when the submit button is disabled.

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ Main color: #fff
 /* ///////////////////////////////// */
 /* CSS Variables */
 :root {
-  --primary-color: #DF1F78;
+  --primary-color: #df1f78;
   --bg-color: #000;
 }
 
@@ -31,7 +31,7 @@ Main color: #fff
 html {
   /* 1rem = 10px */
   font-size: 62.5%;
-  font-family: "Poppins";
+  font-family: 'Poppins';
 }
 
 /* ///////////////////////////////// */
@@ -61,7 +61,8 @@ h1 {
   color: #fff;
   padding-inline: 2.4rem;
 
-  background:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/intro-background.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url('../img/intro-background.jpg');
   background-size: cover;
 }
 .intro-section h2 {
@@ -76,7 +77,7 @@ h1 {
 
   display: flex;
   flex-direction: column;
-  gap: .8rem;
+  gap: 0.8rem;
 }
 .research {
   font-size: 1.8rem;
@@ -102,7 +103,7 @@ h1 {
   padding-block: 4.8rem;
 }
 .info-list {
-  list-style: none
+  list-style: none;
 }
 .info-list-right {
   grid-column: 3/4;
@@ -120,7 +121,7 @@ h1 {
   flex-direction: column;
   font-size: 1.2rem;
   letter-spacing: 0.2;
-  gap: .8rem;
+  gap: 0.8rem;
 }
 .list-title {
   font-weight: bold;
@@ -149,9 +150,9 @@ h1 {
 }
 .form-label {
   display: block;
-  margin-block-end: .4rem;
+  margin-block-end: 0.4rem;
 }
-.sub-form input:not([type=radio]) {
+.sub-form input:not([type='radio']) {
   width: 100%;
   height: 3.2rem;
   border-radius: 5px;
@@ -164,12 +165,12 @@ h1 {
 .sub-form fieldset > legend {
   margin-block-end: 1.2rem;
 }
-.sub-form input[type=radio] {
-  margin-inline-end: .8rem
+.sub-form input[type='radio'] {
+  margin-inline-end: 0.8rem;
 }
 .form-choice {
   display: flex;
-  margin-block-end: .8rem;
+  margin-block-end: 0.8rem;
 }
 .submit-btn {
   font-size: 1.8rem;
@@ -181,8 +182,13 @@ h1 {
   height: 5rem;
   color: #fff;
   margin-block: 1.2rem;
-  padding: .4rem;
+  padding: 0.4rem;
   cursor: pointer;
+
+  transition: all 0.25s;
+}
+.submit-btn:disabled {
+  background: #444;
 }
 .post-form {
   display: block;
