--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ h1 {
   padding-inline: 2.4rem;
 
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url('../img/intro-background.jpg');
+    url('../img/intro-background.webp');
   background-size: cover;
 }
 .intro-section h2 {
