modify queries for better readability; change focus outline

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,3 +210,10 @@ footer p {
   font-size: 1rem;
   color: #fff;
 }
+
+/* ///////////////////////////////// */
+/* FOCUS OUTLINE */
+
+*:focus {
+  outline: 0.3rem solid var(--primary-color);
+}
