--- a/css/queries.css
+++ b/css/queries.css
@@ -10,19 +10,7 @@
   }
 }
 
-@media screen and (max-width: 800px) {
-  .research {
-    padding-inline: 0;
-  }
-  .what-course {
-    padding-inline: 6.4rem;
-  }
-  .form-section {
-    padding-inline: 3.2rem;
-  }
-}
-
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 850px) {
   .form-section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -42,7 +30,19 @@
     justify-content: space-evenly;
     grid-column: 1/2;
     grid-row: 2/3;
-    margin-block-start: -1.6rem;
+    margin-block-start: -2.4rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .research {
+    padding-inline: 0;
+  }
+  .what-course {
+    padding-inline: 6.4rem;
+  }
+  .form-section {
+    padding-inline: 3.2rem;
   }
 }
 
@@ -50,12 +50,13 @@
   .promotion {
     font-size: 3rem;
   }
-  .research, .what-course {
+  .research,
+  .what-course {
     font-size: 1.6rem;
-}
+  }
 }
 
-@media screen and (max-width:492px) {
+@media screen and (max-width: 580px) {
   .form-section {
     display: flex;
     flex-direction: column;
@@ -81,7 +82,8 @@
   .promotion {
     font-size: 2.4rem;
   }
-  .research, .what-course {
+  .research,
+  .what-course {
     font-size: 1.4rem;
   }
 }
